--- a/quarto_example.qmd
+++ b/quarto_example.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Matplotlib demo"
+title: "Stockfish Explainability"
 format:
   html:
     code-fold: true
@@ -8,8 +8,30 @@ toc: true
 number-sections: true
 ---
 
-# matplotlib demo
-For a demonstration of a line plot on a polar axis, see @fig-polar.
+# Explainability and Stockfish
+
+## Introduction
+This document is a work in progress. It is intended to be a guide to the explainability features of Stockfish. It is not intended to be a guide to Stockfish itself. For that, please see the [Stockfish documentation](https://stockfishchess.org/documentation/).
+
+## What is Explainability?
+Explainability is the ability to understand why a machine learning model makes the decisions it does. It is a key component of the Explainable AI movement. It is also a key component of the Fairness, Accountability, and Transparency
+
+## Explainability Methods
+In the quest to understand why a machine learning model makes the decision it does we want to find out what it has learnt. The methods we will be using to explain Stockfish are:
+- Feature Importance
+- Saliency Maps
+- Concept Probing  
+
+
+
+
+
+
+
+# Concept Probing
+
+
+
 
 ```{python}
 #| label: fig-polar
