--- a/quarto_example.qmd
+++ b/quarto_example.qmd
@@ -78,7 +78,7 @@ Inferring that if a concept is linearly separable then it is being used by the m
 
 If a probing method is too simple, it may not correctly reveal the degree of which the concept is being used. 
 
-For example simpler probing methods might not be able to handle problems related to sparsity, e.g. if a concept is most often present under a given condition, which is not a confounding factor, then the probing method may not be able to detect the concept.
+For example, simpler probing methods might not be able to handle problems related to sparsity, e.g. if a concept is most often present under a given condition, which is not a confounding factor, then the probing method may not be able to detect the concept.
 
 - ***When is a probing method too complex?*** 
 
@@ -91,7 +91,7 @@ So given one extreme case, where we probe for a concept in the input layer with 
 
 ### Autoencoder Experiment
 
-This experiment is intended to shed a light on a comparison between different probing architectures. When probing for a concept, it is often hard to know the ground trouth. However, if we use an autoencoder, that compresses the input space and successfully reconstructs it, we know that the concepts are somehow represented in the hidden layers of the autoencoder. 
+This experiment is intended to shed a light on a comparison between different probing architectures. When probing for a concept, it is often hard to know the ground trouth, i.e. to what extend the concept is present. However, if we use an autoencoder, that compresses the input space and successfully reconstructs it, we know that the concepts are somehow represented in the hidden layers of the autoencoder. 
 
 This is relevant when probing a small neural network, such as Stockfish' NNUE, where the concept representations are much more compressed than in a large neural network. 
 
@@ -100,24 +100,11 @@ Here we seek to understand better when a probing method is too simple and giving
 *One key insight gained throught this experiment is just how valuable concept probing is to evaluating the reconstruction properties of generative models.* 
 
 
+#### The Autoencoder
+
+The autoencoder consists of two parts, an encoder and a decoder which are trained to reconstruct the input space. The encoder and decoder mirror each other in terms of the number of layers and the number of neurons in each layer. The design uses a sequence of fully connected linear layers with ReLU activations.
 
 
+#### Probing results
 
-```{python}
-#| label: fig-polar
-#| fig-cap: "A line plot on a polar axis"
-
-import numpy as np
-import matplotlib.pyplot as plt
-
-r = np.arange(0, 2, 0.01)
-theta = 2 * np.pi * r
-fig, ax = plt.subplots(
-  subplot_kw = {'projection': 'polar'} 
-)
-ax.plot(theta, r)
-ax.set_rticks([0.5, 1, 1.5, 2])
-ax.grid(True)
-plt.show()
-```
-
+Results
