--- a/stockfish_explain/experiments/chess_auto_encoder/analyze_results.ipynb
+++ b/stockfish_explain/experiments/chess_auto_encoder/analyze_results.ipynb
@@ -359,8 +359,8 @@
    "source": [
     "from small_model import DeepAutoencoder\n",
     "\n",
-    "model = DeepAutoencoder(input_size = 641)\n",
-    "model.load_state_dict(torch.load('models/model_BCE_small_900.pt'))\n",
+    "model = DeepAutoencoder(input_size = 768)\n",
+    "model.load_state_dict(torch.load('models/model_BCE_small_2.pt'))\n",
     "\n",
     "\n",
     "\n",
@@ -724,8 +724,8 @@
    "source": [
     "from model_medium import DeepAutoencoder\n",
     "\n",
-    "model = DeepAutoencoder(input_size = 641)\n",
-    "model.load_state_dict(torch.load('models/model_BCE_medium_900.pt'))\n",
+    "model = DeepAutoencoder(input_size = 768)\n",
+    "model.load_state_dict(torch.load('models/model_BCE_medium.pt'))\n",
     "\n",
     "\n",
     "\n",
@@ -1138,8 +1138,8 @@
    "source": [
     "from model import DeepAutoencoder\n",
     "\n",
-    "model = DeepAutoencoder(input_size = 641)\n",
-    "model.load_state_dict(torch.load('models/model_BCE_700.pt'))\n",
+    "model = DeepAutoencoder(input_size = 768)\n",
+    "model.load_state_dict(torch.load('models/model_BCE.pt'))\n",
     "\n",
     "\n",
     "\n",
