--- a/stockfish_explain/experiments/chess_auto_encoder/analyze_results.ipynb
+++ b/stockfish_explain/experiments/chess_auto_encoder/analyze_results.ipynb
@@ -360,7 +360,7 @@
     "from small_model import DeepAutoencoder\n",
     "\n",
     "model = DeepAutoencoder(input_size = 768)\n",
-    "model.load_state_dict(torch.load('models/model_BCE_small_2.pt'))\n",
+    "model.load_state_dict(torch.load('models/model_BCE_small_2_700.pt'))\n",
     "\n",
     "\n",
     "\n",
@@ -725,7 +725,7 @@
     "from model_medium import DeepAutoencoder\n",
     "\n",
     "model = DeepAutoencoder(input_size = 768)\n",
-    "model.load_state_dict(torch.load('models/model_BCE_medium.pt'))\n",
+    "model.load_state_dict(torch.load('models/model_BCE_medium_700.pt'))\n",
     "\n",
     "\n",
     "\n",
@@ -1139,7 +1139,7 @@
     "from model import DeepAutoencoder\n",
     "\n",
     "model = DeepAutoencoder(input_size = 768)\n",
-    "model.load_state_dict(torch.load('models/model_BCE.pt'))\n",
+    "model.load_state_dict(torch.load('models/model_BCE_700.pt'))\n",
     "\n",
     "\n",
     "\n",
