--- a/report.qmd
+++ b/report.qmd
@@ -14,6 +14,8 @@ number-sections: true
 ## Introduction
 This document is a work in progress. It is intended to be a guide to the explainability features of Stockfish. It is not intended to be a guide to Stockfish itself. For that, please see the [@Stockfish] documentation.
 
+Meeting notes can be found [here](notes.qmd)
+
 ## What is Explainability?
 Explainability is the ability to understand why a machine learning model makes the decisions it does. It is a key component of the Explainable AI movement. It is also a key component of the Fairness, Accountability, and Transparency
 
