--- a/report.qmd
+++ b/report.qmd
@@ -228,19 +228,18 @@ import pandas as pd
 # load dataset
 df = pd.read_csv("https://raw.githubusercontent.com/plotly/datasets/master/volcano.csv")
 
-# create figure
+# Create figure
 fig = go.Figure()
 
 # Add surface trace
-fig.add_trace(go.Surface(z=df.values.tolist(), colorscale="Viridis"))
+fig.add_trace(go.Heatmap(z=df.values.tolist(), colorscale="Viridis"))
 
 # Update plot sizing
 fig.update_layout(
     width=800,
     height=900,
     autosize=False,
-    margin=dict(t=0, b=0, l=0, r=0),
-    template="plotly_white",
+    margin=dict(t=100, b=0, l=0, r=0),
 )
 
 # Update 3D scene options
@@ -249,40 +248,101 @@ fig.update_scenes(
     aspectmode="manual"
 )
 
-# Add dropdown
+# Add drowdowns
+# button_layer_1_height = 1.08
+button_layer_1_height = 1.12
+button_layer_2_height = 1.065
+
 fig.update_layout(
     updatemenus=[
         dict(
             buttons=list([
                 dict(
-                    args=["type", "surface"],
-                    label="3D Surface",
+                    args=["colorscale", "Viridis"],
+                    label="Viridis",
                     method="restyle"
                 ),
                 dict(
-                    args=["type", "heatmap"],
-                    label="Heatmap",
+                    args=["colorscale", "Cividis"],
+                    label="Cividis",
                     method="restyle"
-                )
+                ),
+                dict(
+                    args=["colorscale", "Blues"],
+                    label="Blues",
+                    method="restyle"
+                ),
+                dict(
+                    args=["colorscale", "Greens"],
+                    label="Greens",
+                    method="restyle"
+                ),
             ]),
-            direction="down",
+            type = "buttons",
+            direction="right",
             pad={"r": 10, "t": 10},
             showactive=True,
             x=0.1,
             xanchor="left",
-            y=1.1,
+            y=button_layer_1_height,
+            yanchor="top"
+        ),
+        dict(
+            buttons=list([
+                dict(
+                    args=["reversescale", False],
+                    label="False",
+                    method="restyle"
+                ),
+                dict(
+                    args=["reversescale", True],
+                    label="True",
+                    method="restyle"
+                )
+            ]),
+            type = "buttons",
+            direction="right",
+            pad={"r": 10, "t": 10},
+            showactive=True,
+            x=0.13,
+            xanchor="left",
+            y=button_layer_2_height,
+            yanchor="top"
+        ),
+        dict(
+            buttons=list([
+                dict(
+                    args=[{"contours.showlines": False, "type": "contour"}],
+                    label="Hide lines",
+                    method="restyle"
+                ),
+                dict(
+                    args=[{"contours.showlines": True, "type": "contour"}],
+                    label="Show lines",
+                    method="restyle"
+                ),
+            ]),
+            type = "buttons",
+            direction="right",
+            pad={"r": 10, "t": 10},
+            showactive=True,
+            x=0.5,
+            xanchor="left",
+            y=button_layer_2_height,
             yanchor="top"
         ),
     ]
 )
 
-# Add annotation
 fig.update_layout(
     annotations=[
-        dict(text="Trace type:", showarrow=False,
-        x=0, y=1.085, yref="paper", align="left")
-    ]
-)
+        dict(text="colorscale", x=0, xref="paper", y=1.1, yref="paper",
+                             align="left", showarrow=False),
+        dict(text="Reverse<br>Colorscale", x=0, xref="paper", y=1.06,
+                             yref="paper", showarrow=False),
+        dict(text="Lines", x=0.47, xref="paper", y=1.045, yref="paper",
+                             showarrow=False)
+    ])
 
 fig.show()
 ```
