--- a/stockfish_explain/experiments/chess_auto_encoder/compare_different_models.ipynb
+++ b/stockfish_explain/experiments/chess_auto_encoder/compare_different_models.ipynb
@@ -666,7 +666,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -682,7 +682,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "0001719194acec2445408d856df89780a2f98fad55a466606d2632dd4f5ece98"
@@ -690,5 +689,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
