--- a/stockfish_explain/experiments/probing_nnue/probing.ipynb
+++ b/stockfish_explain/experiments/probing_nnue/probing.ipynb
@@ -10,15 +10,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('base')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "0001719194acec2445408d856df89780a2f98fad55a466606d2632dd4f5ece98"
@@ -26,5 +33,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
